Java 21 Virtual Thread Implement No Blocking for any JNI